# foodie-journal

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  progress.md  pyproject.toml  requirements.md  requirements.txt
journal_api_project/: asgi.py  settings.py  urls.py  wsgi.py
old_users/: models.py  urls.py  views.py
recipes/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_recipe_author.py  0003_auto_20200716_2152.py
users/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
